--- a/css/player.css
+++ b/css/player.css
@@ -215,3 +215,11 @@ a:hover {
     bottom: 0px;
     right: 0px;
 }
+
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
